codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_resume_with_personality_change.snap
---
source: core/tests/suite/model_visible_layout.rs
assertion_line: 372
expression: "format_labeled_requests_snapshot(\"First post-resume turn where resumed config model differs from rollout and personality changes.\",\n&[(\"Last Request Before Resume\", &initial_request),\n(\"First Request After Resume\", &resumed_request),])"
---
Scenario: First post-resume turn where resumed config model differs from rollout and personality changes.

## Last Request Before Resume
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] # RTK (Codex Curated) - Token-Optimized Commands\n\n## Golden Rule\n\nPrefer `codex rtk` for noi...
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:seed resume history

## First Request After Resume
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] # RTK (Codex Curated) - Token-Optimized Commands\n\n## Golden Rule\n\nPrefer `codex rtk` for noi...
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:seed resume history
03:message/assistant:recorded before resume
04:message/developer[2]:
    [01] <model_switch>\nThe user was previously using a different model. Please continue the conversatio...
    [02] <PERMISSIONS_INSTRUCTIONS>
05:message/user:<ENVIRONMENT_CONTEXT:cwd=PRETURN_CONTEXT_DIFF_CWD>
06:message/user:resume and change personality
